# piecemeal

./: .gitignore  CMakeLists.txt  cartesian.h  dag.cpp  dag.h  gdl.cpp  gdl.h  hashes.h  isa.h  kif.cpp  kif.h  logic.cpp  logic.h  prefix_index.h  stdaux.h  test.cpp
app/: cps.cpp  piecelog.cpp  piecemill.cpp  play.cpp
dep/ptest/: ptest.h  ptest.hpp  ptest_main.cpp
games/: ttt.kif  ttt.vis.kif
inc/: compile.h  compile.hpp  dag.hpp  game.h  game.hpp  gdl.h  gdl.hpp  hashes.h  logic.h  logic.hpp  machine.hpp  position_index.h  position_index.hpp  preprocess.hpp  prop.h  prop.hpp  rule.h  rule.hpp  stdaux.h  stdaux.hpp  stdfmt.hpp  unordered_dimap.hpp
inc/piecemeal/: compile.hpp  dag.hpp  game.hpp  ioaux.hpp  logic.hpp  machine.hpp  position_index.hpp  preprocess.hpp  prop.hpp  rule.hpp  stdaux.hpp
inc/private/: logic_export.hpp  piecelog.hpp
logic/: prefix_index.h
src/: compile.cpp  cps.cpp  dag.cpp  game.cpp  gdl.cpp  ioaux.cpp  logic.cpp  piecelog.cpp  play.cpp  preprocess.cpp  prop.cpp
unit/: compile.cpp  dag.cpp  game.cpp  logic.cpp  preprocess.cpp
